fix scale issues for code page display on small mobile

--- a/dark-page.css
+++ b/dark-page.css
@@ -49,13 +49,13 @@
 
 @media (max-width: 400px) {
   .dark-mode pre {
-    font-size: 0.3rem;
+    font-size: 0.3rem !important;
     overflow-x: auto;
     max-width: 100%;
   }
 
   img {
-    max-width: 100%;
+    max-width: 90%;
     width: 100%;
     height: auto;
   }
